# ms2mol-evaluation

./: .gitignore  README.md  create_lotus_expanded_db.py  create_lotus_postgresdb.py  create_sirius_data.py  docker-compose.yml  env.env  lotus_expanded_metfrag_results.csv  lotus_metfrag_results.csv  plotting.ipynb  pyproject.toml  run_cfmid_lotus_eval.py  run_metfrag_lotus_eval.py  run_metfrag_lotus_expanded.py
src/metfrag_evaluation/: massspecgym.py  metfrag.py  metfrag_config.py  utils.py
src/ms2mol_evaluation/: isdb.py  lotus.py  lotus_expanded.py  massspecgym.py  metfrag.py  metfrag_config.py  utils.py
