[project]
name = "metfrag-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marco Visani", email = "92217074+mvisani@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cache-decorator>=2.2.0",
    "downloaders>=1.0.22",
    "huggingface-hub>=0.33.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matchms>=0.30.0",
    "matplotlib>=3.10.3",
    "pandarallel>=1.6.5",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
